src/test/ui/or-patterns/exhaustiveness-non-exhaustive.stderr
error[E0004]: non-exhaustive patterns: `(2u8..=std::u8::MAX, _)` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:14:11
   |
LL |     match (0u8, 0u8) {
   |           ^^^^^^^^^^ pattern `(2u8..=std::u8::MAX, _)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `((4u8..=std::u8::MAX))` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:18:11
   |
LL |     match ((0u8,),) {
   |           ^^^^^^^^^ pattern `((4u8..=std::u8::MAX))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `(Some(2u8..=std::u8::MAX))` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:22:11
   |
LL |     match (Some(0u8),) {
   |           ^^^^^^^^^^^^ pattern `(Some(2u8..=std::u8::MAX))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: or-patterns are not fully implemented yet
  --> $DIR/exhaustiveness-non-exhaustive.rs:10:10
   |
LL |         (0 | _,) => {}
   |          ^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
